--- a/作用域与作用链.md
+++ b/作用域与作用链.md
@@ -82,6 +82,8 @@ bar();//因为作用域的限制，bar中无法访问到变量a与变量b,因此
 
 + ## 作用域链
 
+  作用域链最前端是自己，最末端是全局变量对象
+
   ![1551952244356](https://i.imgur.com/aWZs1FB.png)
 
 ![1551952272153](https://i.imgur.com/xpAtNX9.png)
