--- a/基本类型与引用类型的区别.md
+++ b/基本类型与引用类型的区别.md
@@ -21,3 +21,19 @@
 
   + 基本类型值：把变量里的数据值传递给参数，之后参数和变量互不影响
   + 引用类型值：把对象的引用（地址）值传递给参数，参数和对象都指向同一个对象，互相影响。
+
+
+
+引用类型复制变量时会互相影响，如果不想影响，可以先赋值一个{}空对象
+
+浅拷贝
+
+![1553223486638](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\1553223486638.png)
+
+深拷贝=浅拷贝+递归
+
+例子：拷贝一个对象全部属性的时候，深拷贝比较合适
+
+target有可能是数据类型
+
+![1553226151561](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\1553226151561.png)
