--- a/闭包.md
+++ b/闭包.md
@@ -1,6 +1,6 @@
 # 闭包
 
-+ ## 闭包
++ ## 闭包   闭包保存的是整个变量对象，而不是某个特殊的变量
 
 + 条件
 
@@ -27,4 +27,4 @@
   + 执行上下文
     + 函数每调用一次，就会创建一个新的执行上下文
     + 函数执行结束，相应的执行上下文销毁
-  + 闭包：使函数中的变量被保存在内存中不被释放
+  + **闭包**使函数中的变量被保存**在内存中不被释放**(因为闭包的本质就是在函数外部保持了内部变量的引用)
