--- a/事件与事件流.md
+++ b/事件与事件流.md
@@ -58,8 +58,62 @@
 
 ![1554889235195](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\1554889235195.png)
 
-event.target //触发的元素
 
-event.currentTarget//事件处理函数绑定在哪
+
+## 事件流
+
+#### 》描述从页面接受事件的顺序
+
+当几个都具有事件的元素层叠在一起的时候，那么你点击其中一个元素，并不是只有当前被点击的元素会触发事件，而层叠在你点击范围的所有元素都会触发事件。
+
+#### 》事件流包括两种模式：冒泡和捕获
+
+   现代浏览器默认情况下都是冒泡模型
+   IE 不支持捕获，只支持冒泡。
+
+#### 冒泡
+
++ 事件按照从目标元素到根元素（document对象）的顺序触发，即事件发生的顺序为：**button — div — body — html — document**
+
++ 使用 **stopPropagation()** 方法阻止事件冒泡  event.stopPropagation();
+
++ **event.bubbles**
+
+  返回一个布尔值，表明当前事件是否会向 DOM 树上层元素冒泡
+
++ onmouseover onmouseout —— 支持冒泡
+
++ onmouseenter onmouseleave —— 不支持冒泡
+
+#### 冒泡应用——事件委托
+
+如果想要在大量子元素中单击任何一个都可以运行一段代码，可以将事件监听器设置在其父节点上，并将事件监听器的影响设置为每个子节点，而不是每个子节点单独设置事件监听器。
+
+
+
+**event.target** //触发的元素
+
+**event.currentTarget**//事件处理函数绑定在哪
 
 ![1554882556847](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\1554882556847.png)
+
+![1555001864158](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\1555001864158.png)
+
+
+
+#### 捕获设置：element.addEventListener(type， listener[， useCapture])
+
+**useCapture**：布尔值，指定事件是否在捕获或冒泡阶段触发
+true，指定事件在捕获阶段执行
+false，指定事件在冒泡阶段执行，默认
+
+
+
+## 事件处理周期
+
+触发一个事件后，在 HTML 元素间进行传播过程
+
++ **第一阶段：事件的捕获，事件对象沿 DOM 树向下传播**
++ **第二阶段：目标触发，执行事件监听函数**
++ **第三阶段：事件冒泡，事件沿 DOM 树向上传播**
+
